regressions/marans/SemanticErrors/overloading.ic
//output: Failed.

class N{
      void main(string[] args){}

      void a(int b){}
      int a(){
      	  return 0;
	}

}